<resources>
    <string name="app_name">FindingYourVoice</string>
    <string name="intro">When faced with dilemma at work, many different factors can change the way you choose a solution.
</string>
    <string name="finding_your_voice">Finding Your Voice</string>
    <string name="home">HOME</string>
    <string name="funders_disclaimers">Funders/Disclaimers</string>
    <string name="resources">Resources</string>
    <string name="menu">MENU</string>
    <string name="please_select_from_the_following">Please select from the following…</string>
    <string name="know_your_rights">Work Place Safety</string>
    <string name="maincontent">A safe workplace takes your physical, mental, and emotional safety into consideration.
Your safety at work is protected by 3 laws (pieces of legislation):
</string>
    <string name="for_more_information_please_contactthe_follwing">For more information please contactthe follwing…</string>
    <string name="services_are_free_of_charge">Services are free of charge</string>
    <string name="ohs">OHS </string>
    <string name="empstandard">Employment Satndards</string>
    <string name="human_rights">Human Rights</string>
    <string name="alberta_workers_health_care_centre">Alberta Workers Health Care Centre</string>
    <string name="visit_https_workershealthcentre_ca">Visit: https://workershealthcentre.ca/</string>
    <string name="calgary_workers_resource_centre">Calgary Workers Resource Centre</string>
    <string name="visit_http_www_helpwrc_org">Visit: http://www.helpwrc.org/</string>
    <string name="or_call_403_264_8100">Or call: (403)–264-8100</string>
    <string name="home_Resources">Home</string>
    <string name="or_call_1_780_486_9009">Or call: 1–(780)-486-9009</string>
    <string name="finding_your_voicepage">Finding Your Voice</string>
    <string name="know_your_rightspage">Know Your Rights</string>
    <string name="para1">The purpose of this app is solely to educate workers about workplace health and safety requlations, general advice and guidance on your rights, and the services available to you. None of this information is intended to be used in a legal way.</string>
    <string name="para2_dis">The Chatbot features is auto-animated and not an actual person. The chatbot remains exclusive to this app and is an independent feature from the School of Gobal Acess website</string>

    <string name="para2">The Chatbot features is auto-animated and not an actual person. The chatbot remains exclusive to this app and is an independent feature from the School of Gobal Acess website.</string>
    <string name="funded_by_alberta">Funded by the Government of Alberta</string>
    <string name="in_partnership">In partnership with:</string>
    <string name="next">NEXT</string>
    <string name="chat_icon">chat Icon</string>
    <string name="home_image">Home Image</string>
    <string name="title_activity_menu">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="workplace_safety">Workplace safety</string>
    <string name="workplace_safety_image_icon">Workplace safety Image icon</string>
    <string name="workplace_safety_home_icon">Workplace safety Home Icon</string>

    <string name="Occupational_Health_and_Safety">Occupational Health and Safety</string>
    <string name="maincontent2">Most workers in Alberta are covered under the Alberta Health and Safety Act, Regulation and Code. Some workers such as federal workers, live in care-givers, or farm workers may have their own separate legislation
    </string>
    <string name="maincontent3">In addition to workplace safety, hazards, rights and standards, Alberta has legislation that relates to the rights of all people and their dignity, regardless of backgrounds such as ethnocultural group, source of income, participation in a labour union, gender, age, sexual orientation, or immigration status.</string>
    <string name="maincontent4">Human Rights in Alberta relate to the idea that everyone should be free from discrimination, and apply to employers and workers. Employers cannto sign away their employees human rights. In cases of human rights breaches, specific steps need to be taken. You may read these steps by tapping the button below.</string>
    <string name="Empstandards">Employment Standards</string>
    <string name="maincontent5">Workers and employers in Alberta are subject to the Employment Standards Code and Employment Standrads Regulation</string>
    <string name="maincontent6">Employment Standards apply to all workers with a number of exemptions, such as live-in-workers, truckers, farm workers and firefighters. The Employment Standards Code establsihes Albertas minimum standards of employment in areas outside of health and safety that are relevant to the workplace. These include wages, hours of work, overtime, vacation and holidays, leaves and termination of employment. It also establsihes the processes in cases where employment standards have not been met, such as wrongful termination of employment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_icon">Home Icon</string>
    <string name="home_icon_for_workplace_safety">Home Icon for workplace safety</string>
    <string name="workplace_safety_icon">Workplace safety icon</string>
    <string name="OHS_Content">Most workers in Alberta are protected under the Alberta Health and Safety Act, Regulation and Code. Some workers, such as federal workers, live in care-givers, or farm workers may have their own separate legalisation.\n\n These laws are the minimum standards for protecting workers, and involve both workers and employers.</string>
    <string name="human_rights_content">In addition to workplace safety, hazards, rights, and standards, Alberta has <a href="https://www.yourdictionary.com/legislation"> <font color="#008B8B"> legislation</font></a> that relates to the rights of all people, regardless of background such as <a href="https://en.wiktionary.org/wiki/ethnocultural"><font color="#008B8B">ethnocultural</font></a> group, source of income, participation in a labour union, gender, age, sexual orientation, or immigration status.</string>
    <string name="employment_standards_content">Workers and employers in Alberta must follow the Employment Standards Code and Employment Standards Regulation\n\n </string>
    <string name="current_legislation">Current Legislation</string>
    <string name="icon">Icon</string>
    <string name="human_rights_content1">Human Rights in Alberta relate to the idea that everyone should be free from <a href="https://www.chrc-ccdp.gc.ca/eng/content/what-discrimination"><font color="#008B8B">discrimination</font></a>, and apply to employers and workers. Employers cannot sign away their employees human rights. In cases of human rights breaches ,specific steps need to be taken. <br>
        You may read these steps by tapping the buttons below:\n</br></string>
    <string name="ab_human_right_act">AB Human Right Act</string>
    <string name="a_guide_for_complaints">A Guide For Complaints</string>
    <string name="ab_employment_standard_code">AB Employment Standard Code</string>
    <string name="ab_employment_standard_regulations">AB Employment Standard Regulations</string>
    <string name="human_rights_content2">Employment Standards apply to all the workers with a number of exemptions,such as live- workers, truckers,farm workers and firefighters. </string>

    <string name="emp_std_content3">The Employment Standards Code creates Alberta’s minimum standards of employment in areas outside of health and safety that are related to the workplace. These include wages, hours of work, overtime, vacation and holidays, leaves, and <a href=""><font color="#008B8B">termination</font></a> of employment. It also establishes the steps tp follow  in cases where employment standards have not been met, such as wrongful termination of employment.</string>
    <string name="ab_employment_standard_rules">AB Employment Standard Rules</string>
    <string name="disclaimer">Disclaimer:</string>
    <string name="i_agree">I Agree</string>
    <string name="basic_rights">Basic Rights</string>
    <string name="types_of_hazards">Types of Hazards</string>
    <string name="the_alberta_worker_s_health_centre_and_calgary_workers_resource_centre_provide_free_help_for_people_who_have_issues_with_health_and_safety_and_worker_rights">The Alberta Worker’s Health Centre and Calgary Workers Resource Centre provide free help for people who have issues with health and safety and worker rights:</string>
    <string name="alberta_workers_health_centre">Alberta Workers Health Centre:</string>
    <string name="para3">In the next page,you will find chatrooms where you will be guided through problems in the workplace and you will answer questions to discover the different options available to you.</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="welcome">Welcome!</string>
    <string name="OHS_finding_your_voice">Finding Your Voice</string>
    <string name="in_alberta_workers_have_4_basic_rights_that_relate_to_health_safety">In Alberta, workers have 4 basic rights that relate to health safety.</string>
    <string name="right_to">Right To</string>
    <string name="read_more">Read More</string>
    <string name="as_workers_we_have_legal_responsibility_to_follow_the_health_and_safety_rules_to_not_cause_or_participate_in_harassment_bullying_or_violence_and_to_report_unsafe_work_conditions_although_it_is_not_always_easy_to_do_so_failure_to_do_so_can_have_serious_consequences_such_as_undocumented_injuries_or_workplaces_that_remain_unsafe_there_are_4_hazards_that_relate_to_workplace_health_and_safety">As workers, we have legal responsibility to follow the health and safety rules, to not cause or participate in harassment, bullying, or violence, and to report unsafe work conditions. Although it is not always easy to do so, failure to do so can have serious consequences (such as undocumented injuries, or workplaces that remain unsafe). There are 4 hazards that relate to workplace health and safety:</string>
    <string name="disclaimer_Main">Disclaimer</string>
    <string name="global_access">Global Access</string>
    <string name="school_of">School of</string>
</resources>
