<?xml version="1.0" encoding="utf-8"?>

<!-- Constraint layout for the entire page-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Popup_Disclaimer">

    <!-- textview for welcome -->
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:background="#009688"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- ImageView for Icon -->

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="455dp"
        android:layout_height="249dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="10dp"
        android:background="#009688"
        android:contentDescription="@string/icon"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/disclaimer_illustration" />


    <TextView
        android:id="@+id/textView15"
        android:layout_width="319dp"
        android:layout_height="167dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/para1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Guide_link_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <!-- button for i agree-->
    <Button
        android:id="@+id/Guide_link_button"
        android:layout_width="79dp"
        android:layout_height="48dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="174dp"
        android:layout_marginBottom="120dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/i_agree"
        android:textColor="#009688"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView15"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />



    <!-- textview for title-->
    <TextView
        android:id="@+id/textView16"
        android:layout_width="181dp"
        android:layout_height="57dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/disclaimer"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>