<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Human_RightsFragment">

    <!-- TODO: Update blank fragment layout -->


    <!-- Textview for paragraph 1-->
    <TextView
        android:id="@+id/Human_Rights_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/human_rights_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Textview for paragraph 2-->
    <TextView
        android:id="@+id/emp_std_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/human_rights_image"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="20dp"
        android:text="@string/human_rights_content1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Human_Rights_textView1" />

    <!-- Button for AB Human Right Act link-->
    <Button
        android:id="@+id/AB_Human_Rights_link_button"
        android:layout_width="202dp"
        android:layout_height="88dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/workplacesafetylink_buttonstyle"
        android:drawableStart="@drawable/btn_link"
        android:text="@string/ab_human_right_act"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/Guide_link_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emp_std_textView2" />

    <!-- Button for A Guide for complaints link-->
    <Button
        android:id="@+id/Guide_link_button"
        android:layout_width="217dp"
        android:layout_height="88dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/workplacesafetylink_buttonstyle"
        android:drawableStart="@drawable/btn_link"
        android:text="@string/a_guide_for_complaints"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AB_Human_Rights_link_button"
        app:layout_constraintTop_toBottomOf="@+id/emp_std_textView2" />


    <!-- Finding Your Voice button to move to finding your voice page -->
    <Button
        android:id="@+id/FYV_HR_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/fyv_button_style"
        android:drawableStart="@drawable/group303"
        android:paddingStart="20dp"
        android:text="@string/finding_your_voice"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AB_Human_Rights_link_button"
        tools:ignore="RtlSymmetry" />


</androidx.constraintlayout.widget.ConstraintLayout>