<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".OHSFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/OHS_Content_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/OHS_Content"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_link_current_legislation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageView_link_current_legislation"
        android:layout_width="182dp"
        android:layout_height="67dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="180dp"
        android:background="#000000"
        android:drawableStart="@drawable/btn_link"
        android:text="@string/current_legislation"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/OHS_Content_textView" />

    <Button
        android:id="@+id/KYR_OHS_button"
        android:layout_width="263dp"
        android:layout_height="64dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="243dp"
        android:text="@string/finding_your_voice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_link_current_legislation" />


</androidx.constraintlayout.widget.ConstraintLayout>